--- a/index.html
+++ b/index.html
@@ -1,58 +1,204 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Decodedge</title>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Decodedge | Performance-Focused Trading Journal</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+}
+
 body {
-  margin:0;
-  font-family: Arial, sans-serif;
-  background: #0b0f1a;
-  color: white;
-  text-align: center;
+    background: #0f172a;
+    color: #f1f5f9;
+    line-height: 1.6;
 }
+
 .container {
-  padding: 80px 20px;
+    width: 90%;
+    max-width: 1100px;
+    margin: auto;
 }
+
+section {
+    padding: 80px 0;
+}
+
+h1, h2 {
+    font-weight: 700;
+}
+
 h1 {
-  font-size: 48px;
-  letter-spacing: 2px;
+    font-size: 48px;
 }
+
+h2 {
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
 p {
-  font-size: 20px;
-  color: #a0b4ff;
-  max-width: 600px;
-  margin: 20px auto;
+    color: #94a3b8;
 }
-.button {
-  display: inline-block;
-  margin-top: 30px;
-  padding: 12px 30px;
-  background: #1e40ff;
-  color: white;
-  text-decoration: none;
-  border-radius: 6px;
-  font-weight: bold;
+
+.btn {
+    display: inline-block;
+    padding: 14px 28px;
+    background: #2563eb;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    margin-top: 20px;
+    transition: 0.3s ease;
 }
-.footer {
-  margin-top: 100px;
-  font-size: 14px;
-  color: #555;
+
+.btn:hover {
+    background: #1d4ed8;
+}
+
+/* HERO */
+.hero {
+    text-align: center;
+    padding-top: 120px;
+}
+
+.hero p {
+    margin-top: 20px;
+    font-size: 18px;
+}
+
+/* FEATURES */
+.features {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
+}
+
+.card {
+    background: #1e293b;
+    padding: 30px;
+    border-radius: 12px;
+    transition: 0.3s;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    background: #334155;
+}
+
+/* PRICING */
+.pricing {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+}
+
+.price-card {
+    background: #1e293b;
+    padding: 40px;
+    border-radius: 12px;
+    width: 280px;
+    text-align: center;
+}
+
+.price-card h3 {
+    margin-bottom: 10px;
+}
+
+.price {
+    font-size: 32px;
+    font-weight: bold;
+    margin: 20px 0;
+}
+
+/* FOOTER */
+footer {
+    background: #0b1120;
+    padding: 40px 0;
+    text-align: center;
+    font-size: 14px;
+    color: #64748b;
 }
 </style>
 </head>
+
 <body>
 
-<div class="container">
-  <h1>DECODEDGE</h1>
-  <p>Track. Analyze. Improve.</p>
-  <p>A performance-focused trading journal built for disciplined traders.</p>
-  <a href="#" class="button">Coming Soon</a>
-</div>
+<!-- HERO -->
+<section class="hero container">
+    <h1>Track. Analyze. Improve.</h1>
+    <p>Decodedge is a performance-focused trading journal built for disciplined Nifty & BankNifty traders.</p>
+    <a href="#pricing" class="btn">Get Started</a>
+</section>
 
-<div class="footer">
-  © 2026 Decodedge. All rights reserved.
-</div>
+<!-- WHY -->
+<section class="container">
+    <h2>Why Decodedge?</h2>
+    <p>Most traders chase strategy. Few track behavior.  
+    Decodedge helps you measure consistency, risk control, and execution quality.</p>
+</section>
+
+<!-- FEATURES -->
+<section class="container">
+    <h2>Core Features</h2>
+    <div class="features">
+        <div class="card">
+            <h3>Trade Logging</h3>
+            <p>Structured journal with entry, exit, RR, psychology tracking.</p>
+        </div>
+        <div class="card">
+            <h3>Performance Metrics</h3>
+            <p>Win rate, expectancy, drawdown, risk analysis dashboard.</p>
+        </div>
+        <div class="card">
+            <h3>Behavior Tracking</h3>
+            <p>Identify overtrading, revenge trading, and discipline leaks.</p>
+        </div>
+    </div>
+</section>
+
+<!-- PRICING -->
+<section id="pricing" class="container">
+    <h2>Pricing</h2>
+    <div class="pricing">
+        <div class="price-card">
+            <h3>Lite</h3>
+            <div class="price">₹499</div>
+            <p>Basic Trade Log<br>Performance Summary<br>Email Support</p>
+            <a href="#" class="btn">Buy Now</a>
+        </div>
+
+        <div class="price-card">
+            <h3>Pro</h3>
+            <div class="price">₹1499</div>
+            <p>Advanced Analytics<br>Psychology Tracker<br>Risk Dashboard</p>
+            <a href="#" class="btn">Upgrade</a>
+        </div>
+    </div>
+</section>
+
+<!-- EMAIL CAPTURE -->
+<section class="container" style="text-align:center;">
+    <h2>Join Early Access</h2>
+    <p>Get updates and early feature access.</p>
+    <form action="https://formspree.io/f/yourformid" method="POST" style="margin-top:20px;">
+        <input type="email" name="email" placeholder="Enter your email"
+        style="padding:12px;width:250px;border-radius:6px;border:none;">
+        <button type="submit" class="btn">Subscribe</button>
+    </form>
+</section>
+
+<!-- FOOTER -->
+<footer>
+    © 2026 Decodedge. Built for performance-focused traders.
+</footer>
 
 </body>
 </html>
