--- a/index.html
+++ b/index.html
@@ -230,10 +230,14 @@ footer {
   <h2 class="section-title">Get Your Free Trading Journal</h2>
   <p class="section-sub">Enter your email and receive the Decodedge Free Journal template instantly.</p>
 
-  <form action="https://formsubmit.co/YOUR-EMAIL@gmail.com" method="POST">
-    <input type="email" name="email" placeholder="Enter your email" required>
-    <button type="submit">Send Journal</button>
-  </form>
+<form action="https://formsubmit.co/contact.decodedge@gmail.com" method="POST">
+  <input type="email" name="email" placeholder="Enter your email" required>
+  
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_template" value="table">
+
+  <button type="submit">Get Free Journal</button>
+</form>
 </section>
 
 <footer>
