--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -218,7 +219,7 @@ footer {
 
     <div class="card pricing-card">
       <h3>Elite</h3>
-      <div class="price"> / lifetime</div>
+      <div class="price">  lifetime</div>
       <p>Institutional analytics<br>Risk model tracking<br>Private sessions</p>
       <a href="#signup" class="btn-primary">Join Waitlist</a>
     </div>
@@ -230,7 +231,7 @@ footer {
   <h2 class="section-title">Get Your Free Trading Journal</h2>
   <p class="section-sub">Enter your email and receive the Decodedge Free Journal template instantly.</p>
 
-<form action="https://formsubmit.co/contact.decodedge@gmail.com" method="POST">
+ <form action="https://formsubmit.co/contact.decodedge@gmail.com" method="POST">
   <input type="email" name="email" placeholder="Enter your email" required>
   
   <input type="hidden" name="_captcha" value="false">
