--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@ footer {
 
  <form action="https://formsubmit.co/contact.decodedge@gmail.com" method="POST">
   <input type="email" name="email" placeholder="Enter your email" required>
-  
+  <input type="hidden" name="_subject" value="New Decodedge Journal Signup">
+<input type="hidden" name="_next" value="https://decodedge.com/thankyou.html">
+
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_template" value="table">
 
